--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="other_celeb">다른 셀럽의 \n커뮤니티도 참여해봐요!</string>
     <string name="other_celeb2">참여율이 높을 수록 셀럽의 순위가 올라 가요!</string>
+
+    <string name="welcome_message">안녕 승규야\n나 %1$s와 함께 놀아 보자</string>
 </resources>
