--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="other_celeb2">참여율이 높을 수록 셀럽의 순위가 올라 가요!</string>
 
     <string name="welcome_message">은우바라기님 안녕하세요,\n셀럽과의 하루를 시작해 볼까요?</string>
+    <string name="helloBotMessage">승규야 안녕? 오늘 기분은 어때?</string>
 </resources>
