#17 앱 아이콘 변경, 랭킹 시스템 구축(마이 샐럽 랭킹 미구현, 변동 순위 미구현)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyCeleb</string>
+    <string name="app_name">마이셀럽</string>
 
     <string name="other_celeb">다른 셀럽의 \n커뮤니티도 참여해봐요!</string>
     <string name="other_celeb2">참여율이 높을 수록 셀럽의 순위가 올라 가요!</string>
